# GAMES101

./: LICENSE  README.md
Assignment0/: README.md  main.cpp
Assignment1/: README.md  Rasterizer.cpp  Rasterizer.hpp  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment2/: CMakeLists.txt  README.md  Rasterizer.cpp  Rasterizer.hpp  Triangle.cpp  Triangle.hpp  main.cpp
Assignment3/: CMakeLists.txt  README.md  Shader.hpp  Texture.cpp  Texture.hpp  Triangle.cpp  Triangle.hpp  Utility.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment4/: CMakeLists.txt  README.md  main.cpp
Assignment5/: CMakeLists.txt  Light.hpp  Object.hpp  README.md  Renderer.cpp  Renderer.hpp  Scene.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp  Utility.cpp  Utility.hpp  main.cpp
Assignment6/: Area_light.cpp  Area_light.hpp  BVH.cpp  BVH.hpp  Bounding_box.cpp  Bounding_box.hpp  CMakeLists.txt  Intersection.hpp  Material.cpp  Material.hpp  OBJ_Loader.h  Object.hpp  README.md  Ray.cpp  Ray.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp  Utility.cpp  Utility.hpp  Vector.hpp  main.cpp
Assignment7/: Area_light.cpp  Area_light.hpp  BVH.cpp  BVH.hpp  BoundingBox.cpp  BoundingBox.hpp  Bounding_box.cpp  Bounding_box.hpp  CMakeLists.txt  Intersection.hpp  Light.hpp  Material.cpp  Material.hpp  Math.cpp  Math.hpp  Mesh.cpp  Mesh.hpp  OBJ_Loader.h  OBJ_Loader.hpp  Object.cpp  Object.hpp  README.md  Ray.cpp  Ray.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp  Utility.cpp  Utility.hpp  Vector.hpp  main.cpp
Assignment8/: README.md
Assignment8/src/: rope.cpp
